
  - Substitute Git::Repository::Plugin::GitHooks for the Git::More module,
    to take advantage of Git::Repository's plugin architecture.

  - Move all the functions that were defined on Git::Hooks to
    Git::Repository::Plugin::GitHooks, leaving only the ones directly used
    either by Git::Hooks or by one of its plugins "exported".

  - Remove the CheckStructure plugin.

  [Deprecations]

  - Remove the deprecated configuration options
    githooks.gerrit.review-label, githooks.gerrit.vote-ok, and
    githooks.gerrit.vote-nok.

  [New features]

  - Add a the CheckReference plugin.

1.16.0    2017-05-20 18:48:38-03:00 America/Sao_Paulo

  [New features]

  - CheckLog: New option title-match to check the commit message title.

  [Fixes]

  - (PR#37) Specifying multiple anonymous subs for the same hooks did not
    work. Only the first sub that was defined would actually be called. Fixed
    by Dave Rolsky.

  - Test suite bug triggered by Git 2.13.0.

1.15.1    2017-03-02 14:26:16-03:00 America/Sao_Paulo

  [Changes]

  - The old t/test-functions.pl file was turned into a proper module as
    Git::Hooks::Test, which made the tests simpler.

  - Add Travis CI support in GitHub.

  - Use Test::Requires::Git to check the Git version during testing.

  [Thanks]

  - Thanks for the good folks at CV-Library for a bunch of pull requests
    that made most of this new version.
    http://tech-blog.cv-library.co.uk/2017/02/16/february-pull-request-challenge/

1.15.0    2017-01-04 21:45:26-02:00 America/Sao_Paulo

  [New features]

  - New method Git::More::hookname returns the name of the current hook.

  [Fixes]

  - Fix regression on Git::More::get_commits

1.14.2    2016-11-25 10:44:51-02:00 America/Sao_Paulo

  [Fixes]

  - Gerrit 2.13 slightly changed how it passes information to the hooks and
    we had to make some changes to accomodate it.

1.14.1    2016-11-06 17:02:19-02:00 America/Sao_Paulo

  [Fixes]
